--- a/.gitignore
+++ b/.gitignore
@@ -314,3 +314,7 @@ defined.m
 test.m
 *.xlsx
 00_use-case/auxfuns/BaWue_Transnet.m
+00_use-case/subgrid1.m
+00_use-case/subgrid2.m
+00_use-case/subgrid3.m
+00_use-case/totoalgrid.m
